syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/Sysleec/chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc CreateChat(google.protobuf.Empty) returns (CreateChatResponse);
  rpc ConnectChat(ConnectChatRequest) returns (stream Message);
  rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message Message{
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message CreateChatResponse {
  int64 chat_id = 1;
}

message DeleteChatRequest {
  int64 chat_id = 1;
}

message ConnectChatRequest {
  int64 chat_id = 1;
  string username = 2;
}

message SendMessageRequest {
  string chat_id = 1;
  Message message = 2;
}
